styles/Analytics.module.scss
.main {
  padding: 7rem;
  padding-left: 8rem;
  padding-right: 8rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow-y: auto;
}

.descboxes {
  margin-top: 2rem;
  margin-left: 5rem;
  display: flex;
  justify-content: space-between;
  width: 70vw;
  .box {
    background-color: black;
    elevation: 10;
    width: 30%;
    // min-width: 320px;
    color: white;
    text-align: center;
    border-radius: 10px;
    .mainicon {
      height: 1px;
      width: 100%;
      display: flex;
      justify-content: center;
      position: relative;
    }
    .icon {
      text-align: center;
      height: 6rem;
      width: 6rem;
      background-color: black;
      border-radius: 50%;
      position: absolute;
      display: flex;
      justify-content: center;
      align-items: center;
      box-shadow: 0px 0px 16px #fff0f0;
      margin-top: -3rem;
      cursor: pointer;
      &:hover {
        background-color: rgb(160, 159, 159);
        color: black;
      }
    }
    .head,
    .p {
      font-family: Inter, sans-serif;
      font-size: 2rem;
      font-weight: 900;
      margin-top: 4rem;
      margin-bottom: 2rem;
    }
    .p {
      margin-top: 1rem;
    }
  }
}

.barchartsection {
  margin-top: 10rem;
  margin-left: 5rem;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  background: #ffffff;
  border: 1px solid rgba(0, 0, 0, 0.2);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 15px;
  padding: 4rem;
  padding-left: 0;
  padding-right: 0;
  p {
    font-size: 3rem;
    font-weight: 700;
    text-align: center;
  }
  .barchartcont {
    width: 80%;
    height: auto;
    min-height: 500px;
  }
}
.listCon {
  margin: auto;
  padding-top: 1rem;
  width: 51.3vw;
  height: 44vh;
  display: flex;
  justify-content: center;
  flex-direction: column;
  border: 1px solid rgba(0, 0, 0, 0.2);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 15px;
  padding-bottom: 0.5rem;
}
.list {
    margin-right: 12%;
  // padding: 4rem;
  // margin-right: auto;
  // height: 50vh;
  overflow: hidden;
  padding: 2rem;
  font-size: 1.7rem;
  width: 100%;
  height: 100%;
}

.table {
  // border-collapse: collapse;
  width: 100%;
  // border: 1px solid black;
  border-radius: 15px;
}
.th {
  padding: 0.5rem;

  text-align: center;
  border-bottom: 1px solid #ddd;
  background-color: #ddd;
  border-bottom: solid 1px black;
}

.td {
  padding: 0.5rem;

  text-align: center;
  border-bottom: 1px solid #ddd;
}

.tr:nth-child(even) {
  background-color: #f2f2f2;
}
.bottomsec {
  position: relative;
  height: 100%;
  z-index: 20;
  width: 100%;
  margin-top: 10rem;
  margin-left: 5rem;
  // margin-bottom: 10rem;
  padding: 3rem;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  border: 1px solid rgba(0, 0, 0, 0.2);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 15px;
  font-size: 2rem;

  .doughnut {
    width: 51vw;
    height: 53vh;
    text-align: center;
    background: #ffffff;
    border: 1px solid rgba(0, 0, 0, 0.2);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 15px;
    margin: auto; 
    margin-top: 4rem;
    // padding-top: 1rem;
    // padding-bottom: 1.5rem;
    p {
      font-size: 2.5rem;
      font-weight: 700;
      margin-top: 0.5rem;
    }
    .cir{
      margin: auto;
      margin-top: 3rem;
      // margin-top: 5%;
    }
  }
}


 @media screen and (min-width: 769px) and (max-width:  1000){

 }

